--- a/dataloader.ipynb
+++ b/dataloader.ipynb
@@ -113,7 +113,7 @@
     "                    name = str(' '.join(name.split(' ')[0:2]).split('<')[0]).strip('\\n')\n",
     "                except TypeError:\n",
     "                    name = 'Unknown'\n",
-    "                #iter_ = str(i).split('</td>')\n",
+    "                iter_ = str(i).split('</td>')\n",
     "                part_list = []\n",
     "                if name == 'Unknown':\n",
     "                    pass\n",
